<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/axiomlogonew3">

    </ImageView>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/profile_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="SIGN IN"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="5dp"
                    android:hint="User Name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:id="@+id/rlSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableLeft="@android:drawable/ic_partial_secure"
                        android:drawableRight="@android:drawable/ic_partial_secure"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:drawablePadding="5dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/toggle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/security" />
            </RelativeLayout>





            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="50dp"
                android:background="#d67601"
                android:text="Sign in"
                android:drawableStart="@drawable/login"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/new_reg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/new_reg"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>