...


    // Login Screen
    <string name="hint_email">Citrix Username</string>
    <string name="hint_id">Citrix Employee ID</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="empty_username">Please enter user name</string>
    <string name="empty_password">Please enter password</string>
    <string name="verify_login">Verifing Login Credencials</string>
    <string name="invalid_login">Invalid Login, please try again.</string>
    <string name="api_fail">Api error, try again.</string>

...
